; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_execute.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@SPI_ERROR_ARGUMENT = common dso_local global i32 0, align 4
@_SPI_PLAN_MAGIC = common dso_local global i32 0, align 4
@CURSOR_OPT_PARALLEL_OK = common dso_local global i32 0, align 4
@InvalidSnapshot = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SPI_execute(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_5__, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i64, i64* %7, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %12, %3
  %16 = load i32, i32* @SPI_ERROR_ARGUMENT, align 4
  store i32 %16, i32* %4, align 4
  br label %38

17:                                               ; preds = %12
  %18 = call i32 @_SPI_begin_call(i32 1)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* %9, align 4
  store i32 %22, i32* %4, align 4
  br label %38

23:                                               ; preds = %17
  %24 = call i32 @memset(%struct.TYPE_5__* %8, i32 0, i32 8)
  %25 = load i32, i32* @_SPI_PLAN_MAGIC, align 4
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  store i32 %25, i32* %26, align 4
  %27 = load i32, i32* @CURSOR_OPT_PARALLEL_OK, align 4
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  store i32 %27, i32* %28, align 4
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @_SPI_prepare_oneshot_plan(i8* %29, %struct.TYPE_5__* %8)
  %31 = load i32, i32* @InvalidSnapshot, align 4
  %32 = load i32, i32* @InvalidSnapshot, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load i64, i64* %7, align 8
  %35 = call i32 @_SPI_execute_plan(%struct.TYPE_5__* %8, i32* null, i32 %31, i32 %32, i32 %33, i32 1, i64 %34)
  store i32 %35, i32* %9, align 4
  %36 = call i32 @_SPI_end_call(i32 1)
  %37 = load i32, i32* %9, align 4
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %23, %21, %15
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @_SPI_begin_call(i32) #1

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @_SPI_prepare_oneshot_plan(i8*, %struct.TYPE_5__*) #1

declare dso_local i32 @_SPI_execute_plan(%struct.TYPE_5__*, i32*, i32, i32, i32, i32, i64) #1

declare dso_local i32 @_SPI_end_call(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
